--- a/html-css-practico/css/style.css
+++ b/html-css-practico/css/style.css
@@ -131,7 +131,7 @@ main .main-buttons button:hover {
 footer {
 	width: 100%;
 	height: 50px;
-	position: absolute;;
+	position: absolute;
 	bottom: 0;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
