--- a/mobile-first/css/styles.css
+++ b/mobile-first/css/styles.css
@@ -348,14 +348,13 @@ section.main-plans-container {
 }
 .plans-container--slider {
     display: flex;
-    justify-content: center;
-    /* gap: 50px; */
+    gap: 50px;
     height: 316px;
+    margin: 0 15px;
     overflow-x: scroll;
     overscroll-behavior-x: contain;
     scroll-snap-type: x proximity;
-
-
+    padding-top: 4rem;
 }
 .plans-container--slider::-webkit-scrollbar {
     background-color: var(--soft-orange);
@@ -371,7 +370,7 @@ section.main-plans-container {
     min-width: 190px;
     max-width: 300px;
     height: 247px;
-    margin: 50px 10px 0;
+    margin: 50px auto 0;
     padding: 0 15px;
     background-color: var(--just-white);
     border-radius: 8px;
