--- a/mobile-first/css/styles.css
+++ b/mobile-first/css/styles.css
@@ -348,13 +348,13 @@ section.main-plans-container {
 }
 .plans-container--slider {
     display: flex;
-    gap: 50px;
+    gap: 10px;
     height: 316px;
     margin: 0 15px;
     overflow-x: scroll;
     overscroll-behavior-x: contain;
     scroll-snap-type: x proximity;
-    padding-top: 4rem;
+    padding: 4rem 0;
 }
 .plans-container--slider::-webkit-scrollbar {
     background-color: var(--soft-orange);
@@ -366,9 +366,9 @@ section.main-plans-container {
 .plans-container--card {
     position: relative;
     scroll-snap-align: center;
-    width: 70%;
+    width: 20%;
     min-width: 190px;
-    max-width: 300px;
+    max-width: 280px;
     height: 247px;
     margin: 50px auto 0;
     padding: 0 15px;
@@ -460,4 +460,25 @@ section.main-plans-container {
     height: 20px;
     background-image: url("../assets/icons/orange-right-arrow.svg");
     vertical-align: text-bottom;
+}
+footer {
+    width: 100%;
+    min-width: 320px;
+    height: 150px;
+    background-color: var(--bitcoin-orange);
+    display: flex;
+    justify-content: space-evenly; 
+    align-items: center;
+}
+footer .footer-left ul {
+    list-style: none;
+    margin-bottom: 8px;
+    font-size: 1.4rem;
+    line-height: 2.5rem;
+
+}
+footer ul li a {
+    color: var(--just-white);
+    font-weight: 500;
+    text-decoration: none;
 }
