--- a/mobile-first/css/styles.css
+++ b/mobile-first/css/styles.css
@@ -37,6 +37,7 @@ header {
     min-width: 320px;
     height: 400px;
     text-align: center;
+    background-color: #84561f;
     background: linear-gradient(207.8deg, var(--warm-black) 16.69%, var(--bitcoin-orange) 100%);
 }
 header img {
@@ -157,7 +158,7 @@ main {
     color: var(--bitcoin-orange);
 }
 .main-comission-table .comission-table--title {
-    color:#1a9af7;
+    color: var(--secondary-blue);
 }
 .currency-table--container, .comission-table--container {
     width: 90%;
@@ -212,10 +213,11 @@ main {
     background-image: url("../assets/icons/trending-up.svg");
 }
 .currency-table--date, .comission-table--date {
+    min-width: 164px;
     width: max-content;
     height: 20px;
-    margin: 15px auto 0;
-    padding: 0.3rem;
+    margin: 0 auto;
+    padding: 8px;
     border-radius: 8px;
 }
 .currency-table--date {
@@ -307,13 +309,14 @@ main {
     font-size: 1.4rem;
     font-weight: 500;
     line-height: 1.8rem;
-    color: #808080;
+    color: #a8a8a8;
 }
 .bitcoin-img-container {
     width: 100%;
     min-width: 320px;
     height: 60vh;
-    background-image: url("../assets/imgs/bitcoinbaby2x.jpg");
+    background-color: #84561f;
+    background-image: url("../assets/imgs/bitcoinbaby2x-min.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
