--- a/html-css-practico/css/style.css
+++ b/html-css-practico/css/style.css
@@ -28,7 +28,7 @@ header nav .nav-right-section {
 nav .nav-right-section a {
 	font-size: 13px;
 	margin-right: 15px;
-	color: #000;
+	color: #000000de;
 }
 nav .nav-right-section .menu-icon {
 	background-image: url("https://static.thenounproject.com/png/756729-200.png");
